further changes to version 2

--- a/css/css.css
+++ b/css/css.css
@@ -15,7 +15,7 @@
     position: relative;
 }
 
-img {
+.img-v1 {
     width:100%;
     position: absolute;
 }
@@ -64,9 +64,31 @@ h2:hover {
     left: 0;
     right: 0;
     padding: 30px;
+    justify-content: center;
+    
 }
 
 .material-einzeln {
     display: flex;
     flex-direction: row;
+
+    align-items: center;
+}
+
+.vorschaubild {
+    width: 10%;
+}
+
+.alles {
+    width:90%;
+}
+
+.linktext {
+    padding: 40px;
+    color: black;
+}
+
+.ueberschrift {
+    padding-top: 50px;
+    padding-bottom:20px;
 }
